Add headed (co-editing) mode to diylc-mcp
The MCP server can now drive a live DIYLC MainFrame instead of a headless
DummyView, so a human and the agent co-edit one shared project: tool calls
update the real window in real time and the human's edits show up in the
agent's next describe_project.

- Activated with -Dorg.diylc.mcp.headed=true (or DIYLC_MCP_HEADED=1); requires
  a display, exits with a clear message if headless. Single jar runs both modes.
- EdtExecutor runs each tool call atomically on the Swing EDT (headed) or inline
  (headless) — never touches the shared Presenter off-thread.
- DiylcEngine.forPresenter() drives mainFrame.getPresenter(); McpServer builds
  the frame on the EDT and ties JVM lifecycle to stdin EOF.
- Unified project->canvas conversion (Coordinates.toCanvas) using the Presenter's
  live extra-space + zoom, replacing the headless zoom=1/margin-off hack; correct
  under any human zoom/pan, mutates no config. Pure-unit tested.
- diylc-mcp now depends on diylc-swing (swing-only system jars re-declared for the
  fat-jar merge). Manual headed smoke script (not CI-gated).

Full reactor mvn test green; headless E2E + headed smoke both pass.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>